turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:3: error: value Black is not a member of object java.awt.Color
	setCouleur(Color.Black)
                         ^